--- a/R_Programming.ipynb
+++ b/R_Programming.ipynb
@@ -6,7 +6,7 @@
       "name": "R-Programming.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN3CWVh2L8bxrwpy+LCkvYt",
+      "authorship_tag": "ABX9TyOviHvCPWUbU6ChkwIzqhSw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -349,17 +349,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "SOkyR4LSjK5a",
-        "outputId": "fb2f47b5-6f21-44b9-a099-c120016ba5c5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fb2f47b5-6f21-44b9-a099-c120016ba5c5"
       },
       "source": [
         "summary(mtcars)\n",
         "str(mtcars)\n",
         "head(mtcars, 5)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -400,11 +400,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "crK6j0j1xO8t",
-        "outputId": "06054edc-9aa7-4029-9308-14df7481727f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "06054edc-9aa7-4029-9308-14df7481727f"
       },
       "source": [
         "library(ggplot2)\n",
@@ -414,7 +414,7 @@
         "qplot(mtcars$cyl, geom = \"bar\")\n",
         "hist(mtcars$hp)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -467,37 +467,31 @@
       "cell_type": "code",
       "metadata": {
         "id": "maTTHeLryVZH",
-        "outputId": "e8347c92-dd29-4380-f7c4-1a39ea0e5a50",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6c8d2428-41e2-4a89-c37e-e00277ccb04a"
       },
       "source": [
-        "x <- 1:4\n",
-        " y <- 6:9 \n",
-        "x/y"
+        "install.packages(\"xlsx\")\n",
+        "library(\"xlsx\")\n",
+        "\n",
+        "data <- read.xlsx(\"input.xlsx\", sheetIndex = 1)\n",
+        "print(data)"
       ],
-      "execution_count": 12,
+      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "[1] 0.1666667 0.2857143 0.3750000 0.4444444"
-            ],
-            "text/latex": "\\begin{enumerate*}\n\\item 0.166666666666667\n\\item 0.285714285714286\n\\item 0.375\n\\item 0.444444444444444\n\\end{enumerate*}\n",
-            "text/markdown": "1. 0.166666666666667\n2. 0.285714285714286\n3. 0.375\n4. 0.444444444444444\n\n\n",
-            "text/html": [
-              "<style>\n",
-              ".list-inline {list-style: none; margin:0; padding: 0}\n",
-              ".list-inline>li {display: inline-block}\n",
-              ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
-              "</style>\n",
-              "<ol class=list-inline><li>0.166666666666667</li><li>0.285714285714286</li><li>0.375</li><li>0.444444444444444</li></ol>\n"
-            ]
-          },
-          "metadata": {}
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Installing package into ‘/usr/local/lib/R/site-library’\n",
+            "(as ‘lib’ is unspecified)\n",
+            "\n",
+            "also installing the dependencies ‘rJava’, ‘xlsxjars’\n",
+            "\n",
+            "\n"
+          ]
         }
       ]
     },
@@ -507,9 +501,11 @@
         "id": "zuAkcS6M1Qyf"
       },
       "source": [
-        ""
+        "data <- read.csv(\"students.csv\")\n",
+        "percentage <- max(data$percentage)\n",
+        "print(percentage)"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     }
   ]
